переезд на спирнг секьюрити 6

--- a/src/main/resources/templates/blocks/headerFooter/footer.html
+++ b/src/main/resources/templates/blocks/headerFooter/footer.html
@@ -10,8 +10,7 @@
     <t class="col-md-4 mb-0 text-yellow">© 2023 Company, AutoChess</t>
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="/" class="nav-link px-2 text-yellow">Home</a></li>
-      <li class="nav-item"><a href="/admin/" class="nav-link px-2 text-yellow">Admin</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-yellow">FAQs</a></li>
+      <li class="nav-item"><a th:href="@{/admin}" class="nav-link px-2 text-yellow">Admin</a></li>
       <li class="nav-item"><a href="/home/about" class="nav-link px-2 text-yellow">About</a></li>
     </ul>
   </div>
