--- a/src/main/resources/templates/blocks/menuRightAdmin.html
+++ b/src/main/resources/templates/blocks/menuRightAdmin.html
@@ -4,7 +4,7 @@
     <hr>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="sidebar-nav-link btn btn-dark" href="/admin/">
+        <a class="sidebar-nav-link btn btn-dark" href="/admin">
 
           Главная админ
         </a>
