--- a/src/main/resources/templates/menu/button1/views.html
+++ b/src/main/resources/templates/menu/button1/views.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
 
     <title>Views</title>
-    <link th:insert="blocks/headerFooter/logo :: link"/>
+    <link th:insert="~{blocks/headerFooter/logo :: link}"/>
 </head>
 <header th:insert="blocks/headerFooter/header :: header"></header>
 <body>
