--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
 
     <title>Главня</title>
-    <link th:insert="blocks/headerFooter/logo :: link"/>
+    <link th:insert="~{blocks/headerFooter/logo :: link}"/>
 </head>
 
 <body>
-<header th:insert="blocks/headerFooter/header :: header"></header>
+<header th:insert="~{blocks/headerFooter/header :: header}"></header>
 <div class="row centr-1400px fon-1400px px-1400">
     <div>
         <img src="/image/autochess.jpg" width="1350px">
@@ -27,7 +27,7 @@
 
     </div>
 </div>
-<footer th:insert="blocks/headerFooter/footer :: div"></footer>
+<footer th:insert="~{blocks/headerFooter/footer :: div}"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
