--- a/src/main/resources/templates/menu/button1/autoChessAdmin.html
+++ b/src/main/resources/templates/menu/button1/autoChessAdmin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link th:insert="blocks/headerFooter/logo :: link"/>
+    <link th:insert="~{blocks/headerFooter/logo :: link}"/>
     <title>Админ Главня</title>
 </head>
 
