тесть окружение переменных

--- a/src/main/resources/templates/menu/button2/admin/class/classAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/class/classAdd.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <body>
 
-<header th:insert="blocks/headerFooter/header :: header">
+<header th:insert="~{blocks/headerFooter/header :: header}">
 
 </header>
 
