--- a/src/main/resources/templates/menu/button2/admin/items/itemsAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/items/itemsAdd.html
@@ -9,7 +9,7 @@
 
     <div class="row">
         <nav class="col-md-2 sidebar-nav"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
+             th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
         <div class="col-md-10 fon-1400px pd-50">
             <h1>Добавление оружие</h1>
