--- a/src/main/resources/templates/menu/button3/user/mana.html
+++ b/src/main/resources/templates/menu/button3/user/mana.html
@@ -9,7 +9,9 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-<div class="centr-1400px fon-1400px px-1400">
+<article class="block article" role="main">
+
+    <div class="container article-container">
 
 
     <div class="article__content">
@@ -115,6 +117,7 @@
 
     </div>
 </div>
+</article>
 <footer th:insert="blocks/headerFooter/footer :: div"></footer>
 </body>
 </html>
