--- a/src/main/resources/templates/menu/button4/admin/path/pathAdd.html
+++ b/src/main/resources/templates/menu/button4/admin/path/pathAdd.html
@@ -6,13 +6,12 @@
 
 </header>
 
-<div class="container-fluid">
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
+        <nav class="col-md-2 sidebar-nav"
+             th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <div class="col-md-10 fon-1400px pd-50">
             <h1>Добавление птча</h1>
             <form th:action="@{/admin/add/path}" method="post" enctype="multipart/form-data">
 
@@ -26,9 +25,9 @@
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
 
-        </main>
+        </div>
     </div>
-</div>
+
 
 
 <footer th:insert="blocks/headerFooter/footer :: div"></footer>
