--- a/src/main/resources/templates/menu/button4/admin/path/pathDetals.html
+++ b/src/main/resources/templates/menu/button4/admin/path/pathDetals.html
@@ -8,7 +8,7 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-<div class="centr-1400px fon-1400px px-1400">
+<div class="col-md-10 fon-1400px pd-50">
 
 
     <h2>Патч:</h2>
