--- a/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteAdd.html
+++ b/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteAdd.html
@@ -8,8 +8,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-             th:insert="blocks/menuRightAdmin ::div"></nav>
+        <nav class="col-md-2 sidebar-nav"
+             th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
