--- a/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteDisplay.html
+++ b/src/main/resources/templates/menu/button4/admin/newWebSite/newWebSiteDisplay.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-<header th:insert="blocks/headerFooter/header :: header"></header>
+<header th:insert="~{blocks/headerFooter/header :: header}"></header>
 
 <div class="container-fluid centr-1400px fon-1400px" id="t">
   <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-         th:insert="blocks/menuRightAdmin ::div"></nav>
+    <nav class="col-md-2 sidebar-nav"
+         th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
       <div class="border border-dark" id="pading">
