--- a/src/main/resources/templates/menu/button4/admin/path/pathDisplay.html
+++ b/src/main/resources/templates/menu/button4/admin/path/pathDisplay.html
@@ -8,11 +8,11 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-<div>
-<div id="sidebarMenu" class="grid px-274"
-     th:insert="blocks/menuRightAdmin ::div"></div>
+<div class="row">
+  <nav class="col-md-2 sidebar-nav"
+       th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
-<div class="centr-1400px fon-1400px grid" >
+  <div class="col-md-10 fon-1400px pd-50">
 
 
         <table>
