--- a/src/main/resources/templates/menu/button5/admin/energising/energisingDisplay.html
+++ b/src/main/resources/templates/menu/button5/admin/energising/energisingDisplay.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-  <title>Синергии</title>
+    <title>Синергии</title>
 </head>
 
 <body>
-<header th:insert="blocks/headerFooter/header :: header"></header>
-
-<div class="container-fluid" id="t">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
-         th:insert="blocks/menuRightAdmin ::div"></nav>
-
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="centr-1400px fon-1400px">
-
-        
-          
-            
-          <h1>Синергии:</h1> <br>
-          <h2><a href="/admin/display/hero">К фигурам</a></h2>
+<header th:insert="~{blocks/headerFooter/header :: header}"></header>
 
 
+<div class="row">
+    <nav class="col-md-2 sidebar-nav"
+         th:insert="~{blocks/menuRightAdmin ::div}"></nav>
 
-          <div th:each="en : ${energising}" class="list-inline-item" id="wh">
-              <div  th:if="${en.energisingImage}" class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-placement="auto" data-bs-trigger="hover focus" th:data-bs-content-id="examplePopover +${en.id}">
-                  <li class="list-inline-item bk"><img th:src="'/images/energising/' + ${en.energisingImage.get(0).id}" height="40px" width="50px"></li>
-                  <!--Modal-->
-                  <div class="modal fade" th:id="examplePopover +${en.id}" tabindex="-1" aria-hidden="true">
+    <div class="col-md-10 fon-1400px pd-50">
 
-                      <img th:if="${en.energisingImage}" th:src="'/images/energising/' + ${en.energisingImage.get(1).id}">
 
-                  </div>
-              </div>>
-              <li class="list-inline-item bk"><a th:href="'/admin/detals/energising/' +${en.id}"  class="nav-link px-2 text-yellow"><t th:text="${en.name}"></t></a></li>
-              <span id="wite">
-          <li  class="list-inline-item bk"><img  th:src="@{/image/Screenshot_5.png}" height="20px" width="20px"></li>
-          <li  class="list-inline-item bk"><t th:if="${en.priceDelete}" th:text="'x ' + ${en.priceDelete}"></t></li>
+        <h1>Синергии:</h1> <br>
+        <h2><a href="/admin/display/hero">К фигурам</a></h2>
+
+
+        <div th:each="en : ${energising}" class="list-inline-item" id="wh">
+            <div th:if="${en.energisingImage}" class="d-inline-block" tabindex="0" data-bs-toggle="popover"
+                 data-bs-placement="auto" data-bs-trigger="hover focus"
+                 th:data-bs-content-id="examplePopover +${en.id}">
+                <li class="list-inline-item bk"><img th:src="'/images/energising/' + ${en.energisingImage.get(0).id}"
+                                                     height="40px" width="50px"></li>
+                <!--Modal-->
+                <div class="modal fade" th:id="examplePopover +${en.id}" tabindex="-1" aria-hidden="true">
+
+                    <img th:if="${en.energisingImage}" th:src="'/images/energising/' + ${en.energisingImage.get(1).id}">
+
+                </div>
+            </div>
+            >
+            <li class="list-inline-item bk"><a th:href="'/admin/detals/energising/' +${en.id}"
+                                               class="nav-link px-2 text-yellow">
+                <t th:text="${en.name}"></t>
+            </a></li>
+            <span id="wite">
+          <li class="list-inline-item bk"><img th:src="@{/image/Screenshot_5.png}" height="20px" width="20px"></li>
+          <li class="list-inline-item bk"><t th:if="${en.priceDelete}" th:text="'x ' + ${en.priceDelete}"></t></li>
         </span>
 
 
-          </div>
+        </div>
 
-          
-
-
-       
-      
-
-
-      </div>
-    </main>
-  </div>
-  <footer th:insert="blocks/headerFooter/footer :: div"></footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-          crossorigin="anonymous"></script>
+    </div>
+    <footer th:insert="blocks/headerFooter/footer :: div"></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <script>
-              const exampleEl = document.getElementById('example')
-              const list = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-              const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
-              list.map((el) => {
-              let opts = {
+        const exampleEl = document.getElementById('example')
+        const list = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+        const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        list.map((el) => {
+            let opts = {
                 animation: false,
-              }
-              if (el.hasAttribute('data-bs-content-id')) {
+            }
+            if (el.hasAttribute('data-bs-content-id')) {
                 opts.content = document.getElementById(el.getAttribute('data-bs-content-id')).innerHTML;
                 opts.html = true;
-              }
-              new bootstrap.Popover(el, opts);
-            })</script>
+            }
+            new bootstrap.Popover(el, opts);
+        })</script>
 </div>
 
 </body>
